<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margintop">

        <TextView
            android:id="@+id/txtView_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_list"
            android:textSize="@dimen/title_list_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margintop">

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            android:textSize="@dimen/colonne_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nom"
            android:textSize="@dimen/colonne_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prenom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prenom"
            android:textSize="@dimen/colonne_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/age"
            android:textSize="@dimen/colonne_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listPersonnes"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>